...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginEnd="22dp"
        android:layout_toEndOf="@+id/user_name"
        android:background="@color/transparent"
        android:drawableBottom="@drawable/ic_check" />

    <TextView
        android:id="@+id/change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/mybutton"
        android:textAllCaps="true"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        android:textStyle=""
        android:textColor="@color/white"
        android:text="Change password" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
...
